<resources>
    <string name="app_name">eMaisha Pay</string>
    <string name="welcome_please_login_to_your_account">Welcome, Please Login to your Account</string>
    <string name="forgot_pass">Forgot password</string>
    <string name="don_t_have_an_account_yet">Don’t have an account yet?</string>
    <string name="create_a_new_account">Create a New Account.</string>
    <string name="sign_up">Sign up</string>
    <string name="district">District</string>
    <string name="sub_county">Sub County</string>
    <string name="village">Village</string>
    <string name="image_preview">Image Preview</string>
    <string name="title_livestock_records">Livestock Records</string>
    <string name="filter_by">Filter By :</string>
    <string name="search_here">Search Here</string>
    <string name="order_deleted">Order Deleted</string>
    <string name="want_to_delete_order">Want to Delete Order ?</string>
    <string name="order_history">Order History</string>
    <string name="no_order_found">No Order Found</string>
    <string name="order_type">Order Type</string>
    <string name="backup_completed_successfully">Backup Completed Successfully</string>
    <string name="unable_to_backup_database_retry">Unable to backup database. Retry</string>
    <string name="database_Import_completed">Database Import Completed</string>
    <string name="unable_to_import_database_retry">Unable to import database. Retry</string>
    <string name="lorem_ipsum">
        No Minimum Order - Order in for yourself or for the group, with no restrictions.
        Deliveries made in a flash. Anytime, anywhere.
        The quickest way to get anything delivered in your city.
        One-stop solution to all your delivery needs.
    </string>
    <string name="full_name"> Full Name </string>
    <string name="first_name"> First Name </string>
    <string name="last_name"> Last Name </string>
    <string name="email"> Email </string>
    <string name="email_address"> Email Address </string>
    <string name="dob"> Date of Birth </string>
    <string name="gender"> Gender </string>
    <string name="male"> Male </string>
    <string name="female"> Female </string>
    <string name="fax"> Fax </string>
    <string name="mobile"> Mobile </string>
    <string name="contact_no"> Contact </string>
    <string name="contact_format" translatable="false">xxxxxxxxx</string>
    <string name="location">Location</string>
    <string name="address"> Address </string>
    <string name="country"> Country </string>
    <string name="countryCode">UG</string>
    <string name="zone"> Zone </string>
    <string name="state"> State </string>
    <string name="city"> City </string>
    <string name="post_code"> Post Code </string>
    <string name="suburb"> Suburb </string>
    <string name="password"> Password </string>
    <string name="confirm_password"> Confirm Password </string>
    <string name="new_password"> New Password </string>
    <string name="current_password"> Current Password </string>
    <string name="new_address"> New Address </string>
    <string name="update_address"> Update Address </string>
    <string name="edit_profile"> Edit Profile </string>
    <string name="subscribe_newsletter"> Subscribe Newsletter </string>
    <string name="a_z" translatable="false">A_Z</string>
    <string name="thank_you"> Thank You </string>
    <string name="add_coupon"> Add Coupon? </string>
    <string name="your_message"> Your Message </string>
    <string name="empty_cart"> Your Cart is Empty </string>
    <string name="record_not_found"> No Record Found </string>
    <string name="item_added_to_cart"> Item Added to Cart </string>
    <string name="item_removed_from_cart"> Removed from Cart </string>
    <string name="something_went_wrong"> Something went Wrong! </string>
    <string name="added_to_favourites"> Added to Favourites </string>
    <string name="removed_from_favourites"> Removed from Favourites </string>
    <string name="not_a_member"> Not a Member? </string>
    <string name="login_or_signup"> Login &amp; Register </string>
    <string name="login_or_create_account"> Please Login or create Account </string>
    <string name="thank_you_for_shopping"> Thank You for shopping with us! </string>
    <string name="coupon_removes_other_coupons"> This coupon may remove all other coupons! </string>
    <string name="select_manufacturer" translatable="false">please select manufacturer</string>
    <string name="select_product_category" translatable="false">please select product category</string>
    <string name="forgot_your_password"> Forgot Your Password? </string>
    <string name="forgot_password"> I\'ve forgotten my password? </string>
    <string name="already_have_account"> Already have an account? </string>
    <string name="search_product_by_name"> Type Something to Search </string>
    <string name="default_shipping"> Same as Delivery Address </string>
    <string name="select_payment_method"> Select Payment Method </string>
    <string name="order_dialog_prompt"> Do you really want to cancel the order? </string>
    <string name="push_notification"> Push Notifications </string>
    <string name="local_notification"> Local Notifications </string>
    <string name="processing"> Processing... </string>
    <string name="please_wait"> Please Wait... </string>
    <string name="invalid_address"> Invalid Address </string>
    <string name="invalid_password"> Invalid Password </string>
    <string name="no_internet"> Internet Connection is not Available </string>
    <string name="permission_rejected"> Permission not Granted! </string>
    <string name="permission_camera_storage"> Need Camera and Storage Permissions! </string>
    <string name="permission_camera_storage_needed"> This app needs camera and storage permissions to take pictures from the gallery or with the camera. </string>
    <string name="rate_now"> Rate It! </string>
    <string name="not_now"> Not Now </string>
    <string name="rate_app_msg"> If you enjoy using this app, it would be great to take a moment to rate it. </string>
    <string name="veryfynumbertxt"> Please enter verification code sent in your text message. </string>
    <string name="report_now" translatable="false"> WhatsApp Now! </string>
    <string name="cancel_now" translatable="false"> Cancel </string>
    <string name="whats_app_msg" translatable="false"> Connect to CdmKart Customer Support! Feel Free to Chat/Call with Us! </string>
    <string name="partner_now" translatable="false"> Join Now! </string>
    <string name="partner_msg" translatable="false"> Does your business need on-demand, hyperlocal deliveries? CdmKart for Business is the one-stop solution you’re looking for. </string>
    <string name="book_now" translatable="false"> Book Now! </string>
    <string name="booking_msg" translatable="false"> Now Book your Appointment Fast and Easily and Get your Appointment Token Number! </string>
    <string name="reviews_ratings" translatable="false"> Ratings and Reviews </string>
    <string name="type_something_to_search">Search here....</string>
    <string name="qr_barcode_scanner">QR or Barcode Scanner</string>
    <string name="camera_permission">Camera Permission Required</string>
    <string name="export_data_to_excel">Export Data to Excel</string>
    <string name="import_from_excel">Import From Excel</string>
    <string name="data">Data</string>
    <string name="export_all_data_to_excel">Export All Data to Excel</string>
    <string name="data_export_fail">Data Export Fail</string>
    <string name="data_successfully_exported">Data Successfully Exported</string>
    <string name="data_exporting_please_wait">Data Exporting. Please wait. . .</string>
    <string name="no_file_found">No File Found</string>
    <string name="data_importing_please_wait">Data importing. Please wait. . .</string>
    <string name="data_successfully_imported">Data Successfully Imported</string>
    <string name="data_import_fail">Data Import Fail</string>
    <string name="shop_information">Shop Information</string>
    <string name="data_backup">Data Backup</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_contact_number">Shop Contact Number</string>
    <string name="shop_email">Shop Email</string>
    <string name="shop_address">Shop Address</string>
    <string name="currency_symbol">Currency Symbol</string>
    <string name="shop_currency">Shop Currency</string>
    <string name="edit">Edit</string>
    <string name="update_information">Update Information</string>
    <string name="payment">Payment method</string>
    <string name="submit">Submit</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="product_name">Product Name</string>
    <string name="weight">Weight:</string>
    <string name="price">Price</string>
    <string name="error">Error</string>
    <string name="error_occured">Error Ocurred Please Try again later!</string>
    <string name="order_receipt">Order Receipt</string>
    <string name="print">Print</string>
    <string name="share">Share</string>
    <string name="open_pdf">Open PDF</string>
    <string name="open_with_external_pdf_reader">Open with external pdf reader</string>
    <string name="generate_pdf_receipt">PDF Receipt</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="edit_suppliers">Edit Suppliers</string>
    <string name="expense_name">Expense Name</string>
    <string name="expense_note_if_any">Expense Note (if any)</string>
    <string name="expense_note">Expense Note</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="expense_date">Expense Date</string>
    <string name="expense_time">Expense Time</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="update_successfully">Update Successfully</string>
    <string name="categories">Categories</string>
    <string name="category_name">Enter Category</string>
    <string name="category_deleted">Category Deleted</string>
    <string name="want_to_delete_category">Want to delete category ?</string>
    <string name="add_category">Add Category</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="category_added_successfully">Category Added Successfully</string>
    <string name="update_category">Update Category</string>
    <string name="category_updated">Category Updated</string>
    <string name="edit_category">Edit Category</string>
    <string name="payment_method_deleted">Payment Method Deleted</string>
    <string name="want_to_delete">Want to delete ?</string>
    <string name="all_payment_method">All Payment Method</string>
    <string name="payment_method_name">Payment Method Name</string>
    <string name="add_payment_method">Add Payment Method</string>
    <string name="enter_payment_method_name">Enter Payment Method Name</string>
    <string name="successfully_added">Successfully Added</string>
    <string name="update_payment_method">Update Payment Method</string>
    <string name="successfully_updated">Successfully Updated</string>
    <string name="wallet" translatable="false">Wallet</string>
    <string name="user_phone" translatable="false">Phone Number</string>
    <string name="user_email" translatable="false">Email</string>
    <string name="user_address_one" translatable="false">Address 1</string>
    <string name="currency">UGX</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="number_zero">0</string>
    <string name="btn_backspace">Back</string>
</resources>