<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="#DDF1FD"
    tools:context=".fragments.wallet_fragments.TokenAuthFragment">

    <ImageView
        android:id="@+id/produce_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dp"
        android:layout_weight=".9"
        android:src="@drawable/ic_new_close_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pin_title"/>

    <TextView
        android:id="@+id/pin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="Enter your 4-digit Pin"
        android:textColor="#A4D9F8"
        android:textSize="29sp"
        app:layout_constraintBottom_toTopOf="@id/pin_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/produce_close" />

    <LinearLayout
        android:id="@+id/pin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin_title"
        app:layout_constraintBottom_toTopOf="@id/pin_view">

        <EditText
            android:id="@+id/pin_code1_edt"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_light_blue_bg"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="14sp"
            android:cursorVisible="false"/>

        <EditText
            android:id="@+id/pin_code2_edt"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_light_blue_bg"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:cursorVisible="false"/>

        <EditText
            android:id="@+id/pin_code3_edt"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_light_blue_bg"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:cursorVisible="false"/>

        <EditText
            android:id="@+id/pin_code4_edt"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/round_light_blue_bg"
            android:gravity="center"
            android:inputType="numberPassword"
            android:maxLength="1"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"
            android:cursorVisible="false"/>

    </LinearLayout>
    <View
        android:id="@+id/pin_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#A4D9F8"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/keyboard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin_layout" />

    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pin_view"
        app:layout_constraintBottom_toTopOf="@id/layout_signin"
        android:divider="@drawable/keyboard_divider">

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/tv_key_1"
                style="@style/keyboard_number_button"
                android:alpha=".56"
                android:text="@string/number_one"
                android:textColor="#123365" />

            <TextView
                android:id="@+id/tv_key_2"
                style="@style/keyboard_number_button"
                android:alpha=".56"
                android:text="@string/number_two"
                android:textColor="#123365" />

            <TextView
                android:id="@+id/tv_key_3"
                style="@style/keyboard_number_button"
                android:alpha=".56"
                android:text="@string/number_three"
                android:textColor="#123365" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/tv_key_4"
                style="@style/keyboard_number_button"
                android:alpha=".56"
                android:text="@string/number_four"
                android:textColor="#123365" />

            <TextView
                android:id="@+id/tv_key_5"
                style="@style/keyboard_number_button"
                android:alpha=".56"
                android:text="@string/number_five"
                android:textColor="#123365" />

            <TextView
                android:id="@+id/tv_key_6"
                style="@style/keyboard_number_button"
                android:alpha=".56"
                android:text="@string/number_six"
                android:textColor="#123365" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/tv_key_7"
                style="@style/keyboard_number_button"
                android:alpha=".56"
                android:text="@string/number_seven"
                android:textColor="#123365" />

            <TextView
                android:id="@+id/tv_key_8"
                style="@style/keyboard_number_button"
                android:alpha=".56"
                android:text="@string/number_eight"
                android:textColor="#123365" />

            <TextView
                android:id="@+id/tv_key_9"
                style="@style/keyboard_number_button"
                android:alpha=".56"
                android:text="@string/number_nine"
                android:textColor="#123365" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/tv_key_clear"
                style="@style/keyboard_button"
                android:text="@string/btn_clear"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#2D84B7" />

            <TextView
                android:id="@+id/tv_key_0"
                style="@style/keyboard_number_button"
                android:alpha=".56"
                android:text="@string/number_zero"
                android:textColor="#123365" />

            <ImageView
                android:id="@+id/tv_key_backspace"
                style="@style/keyboard_button"
                android:src="@android:drawable/ic_input_delete"
                android:text="@string/btn_backspace"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:tint="#2D84B7" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/layout_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/keyboard">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Forgot Pin?  "
            android:textColor="#123365"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_forgot_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/signin1"
            android:text=" Click here "
            android:textColor="#2D84B7"
            android:textSize="14sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>