
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/windowBackgroundDark">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_scan_pay_process_2"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:titleTextColor="@color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:navigationIcon="@drawable/ic_chevron_left_white"
            android:background="@color/colorPrimary"/>



    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/toolbar_scan_pay_process_2">

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="horizontal"
            app:layout_anchor="@+id/linearlayout"
            app:layout_anchorGravity="center"
            android:background="@color/colorPrimary"/>

        <RelativeLayout
            android:id="@+id/layout_merchant_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_white_badge_with_border"
            android:padding="15dp"
            app:layout_anchor="@id/linearlayout"
            app:layout_anchorGravity="bottom|center">

            <TextView
                android:id="@+id/text_merchant_initials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AA"
                android:textSize="16sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>



        </RelativeLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/merchant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Merchant Name"
        android:textSize="15sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_below="@id/coordinator_layout"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"/>

    <RelativeLayout
        android:id="@+id/layout_merchant_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/merchant_name"
        android:gravity="center">

    <TextView
        android:id="@+id/text_merchant_id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Merchant ID : "
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="gravity"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/text_merchant_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/text_merchant_id_title"
        android:text="00000"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="gravity"
        android:gravity="center"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/layout_pay_merchant_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:layout_above="@id/layout_btn_pay"
        android:layout_margin="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="Amount"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/outline_primary"
            android:orientation="horizontal">
            <TextView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/edittext_left_corners_green"
                android:textColor="@color/white"
                android:text="@string/currency"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/txt_bill_total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:paddingStart="@dimen/dimen_10dp"
                android:gravity="start|center_vertical"
                android:inputType="number"
                android:background="@android:color/transparent"
                android:textAlignment="viewStart"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColorPrimaryDark"/>



        </LinearLayout>

    </LinearLayout>
    <FrameLayout
        android:id="@+id/layout_btn_pay"
        android:layout_width="wrap_content"
        android:layout_height="40dip"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginBottom="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rectangular_blue_solid"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/btn_save_pay_merchant"
            style="@style/Button_DW"
            android:layout_width="wrap_content"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:backgroundTint="@color/textColor"
            android:text="Pay"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />



    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_btn_pay">

    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/keyboard_divider2"
        android:visibility="visible"
        android:background="#fafdff"
        android:layout_alignParentBottom="true">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:id="@+id/line5"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />
        </TableRow>
        <TableRow style="@style/keyboard_row2">

            <TextView
                android:id="@+id/tv_key_1"
                style="@style/keyboard_number_button"
                android:text="@string/number_one"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp"/>

            <TextView
                android:id="@+id/tv_key_2"
                style="@style/keyboard_number_button"
                android:text="@string/number_two"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp"/>

            <TextView
                android:id="@+id/tv_key_3"
                style="@style/keyboard_number_button"
                android:text="@string/number_three"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />
        </TableRow>

        <TableRow style="@style/keyboard_row2">

            <TextView
                android:id="@+id/tv_key_4"
                style="@style/keyboard_number_button"
                android:text="@string/number_four"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tv_key_5"
                style="@style/keyboard_number_button"
                android:text="@string/number_five"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tv_key_6"
                style="@style/keyboard_number_button"
                android:text="@string/number_six"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />
        </TableRow>

        <TableRow style="@style/keyboard_row2">

            <TextView
                android:id="@+id/tv_key_7"
                style="@style/keyboard_number_button"
                android:text="@string/number_seven"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tv_key_8"
                style="@style/keyboard_number_button"
                android:text="@string/number_eight"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp" />

            <TextView
                android:id="@+id/tv_key_9"
                style="@style/keyboard_number_button"
                android:text="@string/number_nine"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1"
                android:background="@color/colorPrimary" />
        </TableRow>
        <TableRow style="@style/keyboard_row2">
            <ImageView
                android:id="@+id/tv_key_backspace"
                style="@style/keyboard_button"
                android:src="@drawable/ic_btn_delete"
                android:text="@string/btn_backspace"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:tint="#2D84B7" />

            <TextView
                android:id="@+id/tv_key_0"
                style="@style/keyboard_number_button"
                android:text="@string/number_zero"
                android:textColor="@color/colorPrimary"
                android:textSize="34sp" />


            <ImageView
                android:id="@+id/tv_key_enter"
                style="@style/keyboard_button"
                android:src="@drawable/ic_btn_enter"
                android:text="@string/btn_clear"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#2D84B7" />

        </TableRow>
    </TableLayout>
    </RelativeLayout>
</RelativeLayout>
</layout>
